Essai d'ajout de route avec iron router mais pas encore fonctionnel

--- a/web-app/imports/welcome.html
+++ b/web-app/imports/welcome.html
@@ -1,17 +1,5 @@
 <body>
-  <div class="container">
-    <header>
-      <h1>Todo List</h1>
-    </header>
- 
-    <ul>
-      {{#each tasks}}
-        {{> task}}
-      {{/each}}
-    </ul>
-  </div>
+	<h1>SmartSelfService</h1>	
+	{{> loginButtons}}
+	{{> atForm state='signIn'}}
 </body>
- 
-<template name="task">
-  <li>{{text}}</li>
-</template>
