Template fonctionnel pour afficher une liste

--- a/web-app/client/main.html
+++ b/web-app/client/main.html
@@ -1,3 +1,9 @@
 <head>
   <title>SmartSelfService</title>
 </head>
+
+<body>
+	<header>
+	  <h1 class='monheader'>SmartSelfService</h1>
+	</header>
+</body>
