--- a/web-app/imports/ui/home.html
+++ b/web-app/imports/ui/home.html
@@ -1,12 +1,13 @@
 <template name='home'>
 	{{> loginButtons}}
+	<a href="/search">Rechercher</a>
 	<ul>
-	{{#each table}}
+	{{#each lockers}}
 		{{> write}}
 	{{/each}}
 	</ul>
 </template>
 
 <template name='write'>
-	<li>{{text}}</li>
+	<li>{{text}} {{IP}}</li>
 </template>
