--- a/web-app/imports/ui/connect.html
+++ b/web-app/imports/ui/connect.html
@@ -1,5 +1,15 @@
 <body>
-	<h1>SmartSelfService</h1>	
+	<h1>SmartSelfService</h1>
 	{{> loginButtons}}
 	{{> atForm state='signIn'}}
+	{{> register}}
 </body>
+
+<template name="register">
+    <h2>Register</h2>
+    <form class="register">
+        <p>Email: <input type="email" name="email"></p>
+        <p>Password: <input type="password" name="password"></p>
+        <p><input type="submit" value="Register"></p>
+    </form>
+</template>
