modified the CSS and home and research to also search content of lockers

--- a/web-app/client/main.html
+++ b/web-app/client/main.html
@@ -4,6 +4,6 @@
 
 <body>
 	<header>
-	  <h1 class='monheader'>SmartSelfService</h1>
+	  <h1 class='myheader'>SmartSelfService</h1>
 	</header>
 </body>
