removed the double title

--- a/web-app/imports/ui/home.html
+++ b/web-app/imports/ui/home.html
@@ -1,5 +1,5 @@
 <template name='home'>
 	<br /> <br />
-	<a href="/search">Rechercher</a>
+	<a href="/search">Recherche</a> <a href="/register">Inscription</a>
 	<h3>Bienvenue cher explorateur.</h3>
 </template>
