Created the locker unlocking page, using the ID

--- a/web-app/imports/ui/search.html
+++ b/web-app/imports/ui/search.html
@@ -7,7 +7,7 @@
     <br />
     <ul>
 	{{#each lockers}}
-		<li>{{text}} : {{content}}</li>
+		<li>{{number}} ({{place}}) : {{object}} [{{IP}}]</li>
 	{{/each}}
 	</ul>
 </template>
