added a template to add a locker and display its QR code URL

--- a/web-app/imports/ui/home.html
+++ b/web-app/imports/ui/home.html
@@ -2,4 +2,5 @@
 	<br /> <br />
 	<a href="/search">Recherche</a> <a href="/register">Inscription</a>
 	<h3>Bienvenue cher explorateur.</h3>
+	<a href="/addLocker">Add a locker</a>
 </template>
