--- a/web-app/imports/ui/unlock.html
+++ b/web-app/imports/ui/unlock.html
@@ -6,6 +6,9 @@
         <input type="tel" pattern="^[0-9]{4}$" name="code" autocomplete="off"/>
     </form>
     {{#if errorMessage}}
-		<div class="unlock_error">{{errorMessage}}</div>
+		<h4 class="unlock_error">{{errorMessage}}</h4>
     {{/if}}    
+    {{#if successful}}
+		<h4 class="unlock_success">Locker {{locker.number}} is unlocked.</h4>
+    {{/if}}   
 </template>
