--- a/web-app/imports/ui/home.html
+++ b/web-app/imports/ui/home.html
@@ -1,6 +1,6 @@
 <template name='home'>
 	<br /> <br />
 	<a href="/search">Recherche</a> <a href="/register">Inscription</a>
-	<h3>Bienvenue cher explorateur.</h3>
+	<h3>Bienvenue {{myCurrentUser}}</h3>
 	<a href="/addLocker">Add a locker</a>
 </template>
