added a view to search for free lockers

--- a/web-app/imports/ui/home.html
+++ b/web-app/imports/ui/home.html
@@ -3,4 +3,6 @@
 	<a href="/search">Recherche</a> <a href="/register">Inscription</a>
 	<h3>Bienvenue {{myCurrentUser}}</h3>
 	<a href="/addLocker">Add a locker</a>
+	<br />
+	<a href="/deposit">Leave an object</a>
 </template>
