--- a/web-app/imports/ui/search.html
+++ b/web-app/imports/ui/search.html
@@ -7,7 +7,9 @@
     <br />
     <ul>
 	{{#each lockers}}
-		<li>{{number}} ({{place}}) : {{object}} [{{IP}}]</li>
+		<li>
+			{{number}} ({{place}}) : {{object}} [{{IP}}]
+		</li>
 	{{/each}}
 	</ul>
 </template>
