--- a/web-app/imports/ui/deposit.html
+++ b/web-app/imports/ui/deposit.html
@@ -10,6 +10,6 @@
 <template name='locker'>
 	<li>
 		{{number}} : {{place}}
-		<button class="Goto">Select</button>
+		<button class="Goto" id="{{_id}}">Select</button>
 	</li>
 </template>
