takeoff in progress ands adding the Db depiction

--- a/web-app/imports/ui/home.html
+++ b/web-app/imports/ui/home.html
@@ -1,6 +1,6 @@
 <template name='home'>
 	<br /> <br />
-	<a href="/search">Recherche</a> <a href="/register">Inscription</a>
+	<a href="/search">Recherche</a> <a href="/register">Inscription</a> <a href="/login">Connexion</a>
 	<h3>Bienvenue {{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</h3>
 	<a href="/addLocker">Add a locker</a>
 	<br />
