--- a/web-app/imports/ui/object/dropoff.html
+++ b/web-app/imports/ui/object/dropoff.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="form-group">
 		    <div class="col-sm-offset-2 col-sm-10">
-		      <button type="submit" class="btn btn-primary btn-block" value="Login">Login</button>
+		      <button type="submit" class="btn btn-primary btn-block" value="deposit">Réserver le casier pour mon objet</button>
 		    </div>
 		  </div>
     </form>
