--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -1,7 +1,31 @@
 <template name="menu">
 
-  <nav>
-    <a href="#" id="menu-logoff">Log-off</a>
+  <nav class="navbar navbar-default" role="navigation">
+    <a href="/" class="navbar-brand">Home</a>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-left">
+        {{#unless currentUser}}
+        {{else}}
+          <li class="nav-item active">
+            <a class="nav-link" href="/search">Search</a>
+          </li>
+        {{/unless}}
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        {{#unless currentUser}}
+          <li class="nav-item active">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/register">Register</a>
+          </li>
+        {{else}}
+          <li class="nav-item active">
+            <a class="nav-link" href="#" id="menu-logoff">Log-off</a>
+          </li>
+        {{/unless}}
+      </ul>
+    </div>
   </nav>
 
 </template>
