--- a/web-app/imports/ui/user/actions.html
+++ b/web-app/imports/ui/user/actions.html
@@ -2,7 +2,7 @@
 	<h1>To Do </h1>
 	<ul>
 		{{#each actions}}
-			<li>{{actions.type}} object in locker </li>
+			<li>object in locker </li>
 		{{/each}}
 	</ul>
 </template>
