--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -6,26 +6,30 @@
       <ul class="nav navbar-nav navbar-left">
         {{#unless currentUser}}
         {{else}}
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/search">Search</a>
           </li>
         {{/unless}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{#unless currentUser}}
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/register">Register</a>
           </li>
         {{else}}
-          <li class="nav-item active">
-            <a class="nav-link" href="#" id="menu-logoff">Log-off</a>
+          <li class="nav-item">
+            <a class="nav-link" href="/" id="menu-logoff">Log-off</a>
           </li>
         {{/unless}}
       </ul>
     </div>
   </nav>
+
+  <div id="error">
+    
+  </div>
 
 </template>
