displaying object OK but cannot update user ATM

--- a/web-app/imports/ui/home.html
+++ b/web-app/imports/ui/home.html
@@ -1,5 +1,8 @@
 <template name='home'>
 	<h3>Bienvenue {{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</h3>
-	<a href="/addLocker">Add a locker</a>
-	<a href="/deposit">Leave an object</a>
+	<ul>
+		<li><a href="/addLocker">Add a locker</a></li>
+		<li><a href="/deposit">Leave an object</a></li>
+		<li><a href="/actions">See my actions</a></li>
+	</ul>
 </template>
