--- a/web-app/imports/ui/unlock.html
+++ b/web-app/imports/ui/unlock.html
@@ -1,13 +1,14 @@
 <template name='unlock'>
 	<h1> Locker {{locker.number}}</h1>
-	<h3>To unlock, enter the 4 digits code</h3>
-	<form class="codeForm">
-        <input type="tel" pattern="^[0-9]{4}$" name="code" autocomplete="off"/>
-    </form>
-    {{#if errorMessage}}
-		<h4 class="unlock_error">{{errorMessage}}</h4>
-    {{/if}}
     {{#if successful}}
 		<h4 class="unlock_success">Locker {{locker.number}} is unlocked.</h4>
-    {{/if}}
+    {{else}}
+		<h3>To unlock, enter the 4 digits code</h3>
+		<form class="codeForm">
+			<input type="tel" pattern="^[0-9]{4}$" name="code" autocomplete="off"/>
+		</form>
+		{{#if errorMessage}}
+			<h4 class="unlock_error">{{errorMessage}}</h4>
+		{{/if}}
+	{{/if}}
 </template>
