--- a/web-app/imports/ui/object/own.html
+++ b/web-app/imports/ui/object/own.html
@@ -1,7 +1,12 @@
 <template name='MyObjectsList'>
 
+  <h1>My objects</h1>
+
   {{#each myObjs}}
-    {{name}}
+    <h2>{{name}} <small>Pickup on : {{pickup_date}}</small></h2>
+    <p>
+      {{description}}
+    </p>
   {{/each}}
 
 </template>
