currently updating actions of user when unlocking

--- a/web-app/imports/ui/object/dropoff.html
+++ b/web-app/imports/ui/object/dropoff.html
@@ -34,7 +34,6 @@
 </template>
 
 <template name='Dropreserved'>
-	<a href="/">Home</a>
-	<h1>Locker {{locker.number}} succesfuly reserved for drop off</h1>
+	<h1>Locker {{locker.number}} successfuly reserved for drop off</h1>
 	<h2>To unlock put the code : {{locker.code}}</h2>
 </template>
