--- a/web-app/imports/ui/object/takeoff.html
+++ b/web-app/imports/ui/object/takeoff.html
@@ -8,7 +8,6 @@
 </template>
 
 <template name='reserved'>
-	<a href="/">Home</a>
-	<h1>Locker {{locker.number}} succesfuly reserved</h1>
+	<h1>Locker {{locker.number}} successfuly reserved</h1>
 	<h2>To unlock put the code : {{locker.code}}</h2>
 </template>
