starting to implement the bring back action

--- a/web-app/client/main.html
+++ b/web-app/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>SmartSelfService</title>
+  <link rel="stylesheet" href="bootstrap.css" media="screen" title="persobootstrap" type="css">
 </head>
 
 <body>
