--- a/web-app/imports/ui/search.html
+++ b/web-app/imports/ui/search.html
@@ -1,7 +1,12 @@
 <template name='search'>
-	<form class="query">
-        <input class="queryTerm" type="text" name="text" placeholder="Filter" autocomplete="off"/>
-    </form>
+	<form class="navbar-form query" role="search">
+    <div class="input-group">
+        <input type="text" class="form-control queryTerm" placeholder="Filter" name="text">
+        <div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        </div>
+    </div>
+  </form>
 
     <br />
     <ul>
