--- a/web-app/imports/ui/unlock.html
+++ b/web-app/imports/ui/unlock.html
@@ -1,4 +1,8 @@
 <template name='unlock'>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/Foliotek/AjaxQ/master/ajaxq.js"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/marcoschwartz/aREST.js/master/arest.js"></script>
+	
 	<h1> Locker {{locker.number}}</h1>
     {{#if successful}}
 		<h4 class="unlock_success">Locker {{locker.number}} is unlocked.</h4>
