--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -10,7 +10,7 @@
             <a class="nav-link" href="/search">Search</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/object/own">My Objects</a>
+            <a class="nav-link" href="/object">My Objects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/actions">My Actions</a>
