--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -1,7 +1,7 @@
 <template name="menu">
 
   <nav class="navbar navbar-default" role="navigation">
-    <a href="/" class="navbar-brand">Home</a>
+    <a href="{{pathFor route='home'}}" class="navbar-brand">Home</a>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
         {{#unless currentUser}}
@@ -10,24 +10,24 @@
             <a class="nav-link" href="{{pathFor route='search'}}">Search</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{pathFor route='object.list'}}">My Objects</a>
+            <a class="nav-link" href="{{pathFor route='user.objects'}}">My Objects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/actions">My Actions</a>
+            <a class="nav-link" href="{{pathFor route='user.actions'}}">My Actions</a>
           </li>
         {{/unless}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{#unless currentUser}}
           <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="{{pathFor route='user.login'}}">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/register">Register</a>
+            <a class="nav-link" href="{{pathFor route='user.register'}}">Register</a>
           </li>
         {{else}}
           <li class="nav-item">
-            <a class="nav-link" href="/" id="menu-logoff">Log-off</a>
+            <a class="nav-link" href="{{pathFor route='home'}}" id="menu-logoff">Log-off</a>
           </li>
         {{/unless}}
       </ul>
