--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -4,8 +4,7 @@
     <a href="{{pathFor route='home'}}" class="navbar-brand">Home</a>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
-        {{#unless currentUser}}
-        {{else}}
+        {{#if currentUser}}
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='search'}}">Search</a>
           </li>
@@ -15,7 +14,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='user.actions'}}">My Actions</a>
           </li>
-        {{/unless}}
+        {{/if}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{#unless currentUser}}
