--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -12,6 +12,9 @@
             <a class="nav-link" href="{{pathFor route='user.objects'}}">My Objects</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{pathFor route='object.dropoff.chooseLocker'}}">DropOff</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='user.actions'}}">My Actions</a>
           </li>
         {{/if}}
