--- a/web-app/imports/ui/locker/admin/dispLockers.html
+++ b/web-app/imports/ui/locker/admin/dispLockers.html
@@ -1,36 +1,81 @@
 <template name='dispLockers'>
 	<form class="navbar-form query" role="search">
-    <div class="input-group">
-        <input type="text" class="form-control queryTerm" placeholder="Filter" name="text">
-        <div class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-        </div>
-    </div>
-  </form>
+		<div class="input-group">
+			<input type="text" class="form-control queryTerm" placeholder="Filter" name="text">
+			<div class="input-group-btn">
+				<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+			</div>
+		</div>
+	</form>
 
-    <br />
-    <ul>
-	{{#each lockers}}
-		<li>
-			{{number}} ({{place}}) : {{>dispobject obj_id=object}} [{{IP}}] {{state}}
-			{{#if available}}
-				Available
-			{{else}}
-				Action pending : {{pending}}
-			{{/if}}
-			{{> dispQR id=_id}}
-		</li>
-	{{/each}}
-	</ul>
+
+	<table class="table table-striped table-hover">
+		<thead>
+			<th>
+				ID
+			</th>
+			<th>
+				Place
+			</th>
+			<th>
+				IP
+			</th>
+			<th>
+				Content
+			</th>
+			<th>
+				State
+			</th>
+			<th>
+				Availability
+			</th>
+			<th>
+				QrCode
+			</th>
+		</thead>
+		<tbody>
+			{{#each lockers}}
+				<tr>
+					<td>
+						{{number}}
+					</td>
+					<td>
+						{{place}}
+					</td>
+					<td>
+						{{IP}}
+					</td>
+					<td>
+						{{>dispobject obj_id=object}}
+					</td>
+					<td>
+						{{state}}
+					</td>
+					<td>
+						{{#if available}}
+							<span class="label label-success">
+								Available
+							</span>
+						{{else}}
+							Action pending : {{pending}}
+						{{/if}}
+					</td>
+					<td>
+						{{> dispQR id=_id}}
+					</td>
+				</tr>
+			{{/each}}
+		</tbody>
+	</table>
 </template>
 
 <template name='dispQR'>
 	{{#if showQR}}
-		<button class='toggleQR'>Hide QR code</button>
-		<div class='QRcode'>
-			{{> QRCode text=URL size="128px"}}
-		</div>
+	<button class='toggleQR'>Hide QR code</button>
+	<div class='QRcode'>
+		{{> QRCode text=URL size="128px"}}
+	</div>
 	{{else}}
-		<button class='toggleQR'>Show QR code</button>
+	<button class='toggleQR'>Show QR code</button>
 	{{/if}}
 </template>
