--- a/web-app/imports/ui/object/deposit.html
+++ b/web-app/imports/ui/object/deposit.html
@@ -1,19 +1,45 @@
 <template name='deposit'>
 	<h1>Select a free locker</h1>
-	<ul>
 	{{#unless freeLockers}}
 		No locker available.
 	{{else}}
-		{{#each freeLockers}}
-			{{>locker}}
-		{{/each}}
+	<div class="row">
+		<div class="col-md-3"></div>
+		<div class="col-md-6">
+			<table class="table table-striped table-hover">
+				<thead>
+					<th>
+						ID
+					</th>
+					<th>
+						Place
+					</th>
+					<th>
+						Choose
+					</th>
+				</thead>
+				<tbody>
+					{{#each freeLockers}}
+					{{>locker}}
+					{{/each}}
+				</tbody>
+			</table>
+		</div>
+		<div class="col-md-3"></div>
+	</div>
 	{{/unless}}
-	</ul>
 </template>
 
 <template name='locker'>
-	<li>
-		{{number}} : {{place}}
-		<button class="ChooseLocker" id="{{_id}}">Select</button>
-	</li>
+	<tr>
+		<td>
+			{{number}}
+		</td>
+		<td>
+			{{place}}
+		</td>
+		<td>
+			<button type="button" name="button" id="{{_id}}" class="ChooseLocker btn btn-xs btn-default">Select</button>
+		</td>
+	</tr>
 </template>
