--- a/web-app/imports/ui/object/own.html
+++ b/web-app/imports/ui/object/own.html
@@ -6,16 +6,36 @@
 
     {{#each myObjs}}
       {{#if status history != "takeoff"}}
-        <h2>{{name}} <small>Pickup on : {{toDate pickup_date}}</small></h2>
-        <p>
-          {{description}}
-        </p>
-        {{status history}}
+      <div class="panel
+
+        panel-default
+
         {{#if block}}
-          Item is locked for next pickup.
-        {{else}}
-          <button type="button" class="block btn btn-danger" value="{{_id}}">LOCK</button>
+          panel-warning
         {{/if}}
+
+        ">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            {{name}}
+            <span class="align-right" title="Pickup date">
+              <i class="glyphicon glyphicon-calendar"></i>
+              {{toDate pickup_date}}
+            </span>
+          </h3>
+        </div>
+        <div class="panel-body">
+          {{description}}
+        </div>
+        <div class="panel-footer">
+          {{status history}}
+          {{#if block}}
+          Item is locked for next pickup.
+          {{else}}
+            <button type="button" class="block btn btn-xs btn-danger align-right" value="{{_id}}">LOCK</button>
+          {{/if}}
+        </div>
+      </div>
       {{/if}}
     {{/each}}
   </div>
