--- a/web-app/imports/ui/search.html
+++ b/web-app/imports/ui/search.html
@@ -8,19 +8,54 @@
     </div>
   </form>
 
-    <br />
-    <ul>
-	{{#each lockers}}
-		{{#if notOwner object}}
-			<li>
-				{{number}} ({{place}}) : {{>dispobject obj_id=object}} [{{IP}}] {{state}}
-				{{#if available}}
-					{{#if object}}
-						<button class="Goto" id="{{_id}}">TakeOff</button>
-					{{/if}}
+	<table class="table table-striped table-hover">
+		<thead>
+			<th>
+				ID
+			</th>
+			<th>
+				Place
+			</th>
+			<th>
+				Content
+			</th>
+			<th>
+				Bring Back
+			</th>
+			<th>
+				State
+			</th>
+			<th>
+				Takeoff
+			</th>
+		</thead>
+		<tbody>
+			{{#each lockers}}
+				{{#if notOwner object}}
+					<tr>
+						<td>
+							{{number}}
+						</td>
+						<td>
+							{{place}}
+						</td>
+						<td>
+							{{>dispobject obj_id=object}}
+						</td>
+						<td>
+							{{getPickupDate object}}
+						</td>
+						<td>
+							{{state}}
+						</td>
+						<td>
+							{{#if object}}
+							<button class="Goto btn btn-xs btn-default" id="{{_id}}">TakeOff</button>
+							{{/if}}
+						</td>
+					</tr>
 				{{/if}}
-			</li>
-		{{/if}}
-	{{/each}}
-	</ul>
+			{{/each}}
+		</tbody>
+	</table>
 </template>
