still editting style of object list

--- a/web-app/imports/ui/object/own.html
+++ b/web-app/imports/ui/object/own.html
@@ -11,7 +11,11 @@
       panel-default
 
       {{#if block}}
-      panel-warning
+        {{#if available _id}}
+          panel-danger
+        {{else}}
+          panel-warning
+        {{/if}}
       {{/if}}
 
       ">
