bring back html update

--- a/web-app/imports/ui/locker/admin/dispLockers.html
+++ b/web-app/imports/ui/locker/admin/dispLockers.html
@@ -77,6 +77,6 @@
 			{{> QRCode text=URL size="128px"}}
 		</div>
 	{{else}}
-	<button class='toggleQR'>Show QR code</button>
+	<button class='toggleQR btn btn-xs btn-default'>Show QR code</button>
 	{{/if}}
 </template>
