--- a/web-app/imports/ui/object/own.html
+++ b/web-app/imports/ui/object/own.html
@@ -14,7 +14,8 @@
         {{#if available _id}}
           panel-success
         {{else}}
-          panel-warning
+          transp
+          panel-danger
         {{/if}}
       {{/if}}
 
