--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -2,7 +2,6 @@
 
   <nav class="navbar navbar-default" role="navigation">
     <a href="{{pathFor route='home'}}" class="navbar-brand">Home</a>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
         {{#if currentUser}}
           <li class="nav-item">
@@ -19,7 +18,7 @@
           </li>
         {{/if}}
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right" style="margin-right: 0px;">
         {{#unless currentUser}}
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='user.login'}}">Login</a>
@@ -28,12 +27,22 @@
             <a class="nav-link" href="{{pathFor route='user.register'}}">Register</a>
           </li>
         {{else}}
+          {{#if isAdmin}}
+            <li role="presentation" class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                Administration <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="{{pathFor route='locker.new'}}">Create a Locker</a></li>
+                <li><a href="{{pathFor route='admin.lockers.display'}}">Show Lockers</a></li>
+              </ul>
+            </li>
+          {{/if}}
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='home'}}" id="menu-logoff">Log-off</a>
           </li>
         {{/unless}}
       </ul>
-    </div>
   </nav>
 
 </template>
