added another password for admins

--- a/web-app/imports/ui/user/actions.html
+++ b/web-app/imports/ui/user/actions.html
@@ -29,7 +29,7 @@
 					{{>dispaction locker_id=locker}}
 
 					<td>
-						{{code}}
+						{{realCode locker}}
 					</td>
 				</tr>
 			{{/each}}
