--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -35,6 +35,7 @@
               <ul class="dropdown-menu">
                 <li><a href="{{pathFor route='locker.new'}}">Create a Locker</a></li>
                 <li><a href="{{pathFor route='admin.lockers.display'}}">Show Lockers</a></li>
+                <li><a href="{{pathFor route='admin.users'}}">Manage users</a></li>
               </ul>
             </li>
           {{/if}}
