--- a/web-app/imports/ui/locker/admin/dispLockers.html
+++ b/web-app/imports/ui/locker/admin/dispLockers.html
@@ -30,6 +30,9 @@
 				Availability
 			</th>
 			<th>
+				Unlock code
+			</th>
+			<th>
 				QrCode
 			</th>
 		</thead>
@@ -59,6 +62,9 @@
 						{{else}}
 							Action pending : {{pending}}
 						{{/if}}
+					</td>
+					<td>
+						{{code}}
 					</td>
 					<td>
 						{{> dispQR id=_id}}
