translater a button from french to english and removed a console log

--- a/web-app/imports/ui/object/dropoff.html
+++ b/web-app/imports/ui/object/dropoff.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="form-group">
 		    <div class="col-sm-offset-2 col-sm-10">
-		      <button type="submit" class="btn btn-primary btn-block" value="deposit">Réserver le casier pour mon objet</button>
+		      <button type="submit" class="btn btn-primary btn-block" value="deposit">Reserve the locker to drop off this object</button>
 		    </div>
 		  </div>
     </form>
