fixing css display

--- a/web-app/imports/ui/locker/admin/dispLockers.html
+++ b/web-app/imports/ui/locker/admin/dispLockers.html
@@ -60,7 +60,9 @@
 								Available
 							</span>
 						{{else}}
-							Action pending : {{pending}}
+							<span class="label label-warning">
+								Action pending : {{pending}}
+							</span>
 						{{/if}}
 					</td>
 					<td>
