--- a/web-app/imports/ui/menu.html
+++ b/web-app/imports/ui/menu.html
@@ -1,14 +1,32 @@
 <template name="menu">
 
   <nav class="navbar navbar-default" role="navigation">
-    <a href="{{pathFor route='home'}}" class="navbar-brand">Home</a>
-      <ul class="nav navbar-nav navbar-left">
-        {{#if currentUser}}
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="{{pathFor route='home'}}" class="navbar-brand">Home</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-left">
+          {{#if currentUser}}
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='search'}}">Search</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{pathFor route='user.objects'}}">My Objects</a>
+            <a class="nav-link" href="{{pathFor route='user.objects'}}">
+              My Objects
+              <span class="badge">
+                {{nbObjAvailable}}
+              </span>
+              <span class="badge" style="background-color : #f0ad4e;">
+                {{nbBorrowObj}}
+              </span>
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='object.dropoff.chooseLocker'}}">DropOff</a>
@@ -16,34 +34,36 @@
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='user.actions'}}">My Actions</a>
           </li>
-        {{/if}}
-      </ul>
-      <ul class="nav navbar-nav navbar-right" style="margin-right: 0px;">
-        {{#unless currentUser}}
+          {{/if}}
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          {{#unless currentUser}}
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='user.login'}}">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='user.register'}}">Register</a>
           </li>
-        {{else}}
+          {{else}}
           {{#if isAdmin}}
-            <li role="presentation" class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                Administration <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a href="{{pathFor route='locker.new'}}">Create a Locker</a></li>
-                <li><a href="{{pathFor route='admin.lockers.display'}}">Show Lockers</a></li>
-                <li><a href="{{pathFor route='admin.users'}}">Manage users</a></li>
-              </ul>
-            </li>
+          <li role="presentation" class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+              Administration <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="{{pathFor route='locker.new'}}">Create a Locker</a></li>
+              <li><a href="{{pathFor route='admin.lockers.display'}}">Show Lockers</a></li>
+              <li><a href="{{pathFor route='admin.users'}}">Manage users</a></li>
+            </ul>
+          </li>
           {{/if}}
           <li class="nav-item">
             <a class="nav-link" href="{{pathFor route='home'}}" id="menu-logoff">Log-off</a>
           </li>
-        {{/unless}}
-      </ul>
+          {{/unless}}
+        </ul>
+      </div>
+    </div>
   </nav>
 
 </template>
