displays a message when no lockers are available in search

--- a/web-app/imports/ui/home.html
+++ b/web-app/imports/ui/home.html
@@ -1,5 +1,5 @@
 <template name='home'>
-	<h3>Bienvenue {{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</h3>
+	<h3>Welcome {{currentUser.profile.firstname}} {{currentUser.profile.lastname}}</h3>
 	<ul>
 		{{#if currentUser}}
 			{{#if isAdmin}}
