updating architecture and translated some displayed errors

--- a/web-app/imports/ui/search.html
+++ b/web-app/imports/ui/search.html
@@ -51,6 +51,6 @@
 		</tbody>
 	</table>
 	{{else}}
-		Aucuns objets disponibles dans les casiers
+		No item available in any locker
 	{{/if}}
 </template>
