--- a/web-app/imports/ui/locker/unlock.html
+++ b/web-app/imports/ui/locker/unlock.html
@@ -1,12 +1,13 @@
 <template name='unlock'>
-	
+
 	<h1> Locker {{locker.number}}</h1>
     {{#if successful}}
 		<h4 class="unlock_success">Locker {{locker.number}} is unlocked.</h4>
     {{else}}
 		<h3>To unlock, enter the 4 digits code</h3>
-		<form class="codeForm">
-			<input type="tel" pattern="^[0-9]{4}$" name="code" autocomplete="off"/>
+		<form class="codeForm form-group">
+			<input type="tel" pattern="^[0-9]{4}$" name="code" autocomplete="off" class="form-control"/>
+			<button type="button" name="button" class="btn btn-primary btn-block">Validate</button>
 		</form>
 		{{#if errorMessage}}
 			<h4 class="unlock_error">{{errorMessage}}</h4>
