--- a/web-app/imports/ui/locker/unlock.html
+++ b/web-app/imports/ui/locker/unlock.html
@@ -7,7 +7,7 @@
 		<h3>To unlock, enter the 4 digits code</h3>
 		<form class="codeForm form-group">
 			<input type="tel" pattern="^[0-9]{4}$" name="code" autocomplete="off" class="form-control"/>
-			<button type="button" name="button" class="btn btn-primary btn-block">Validate</button>
+			<button type="button" name="button" action="submit" class="btn btn-primary btn-block">Validate</button>
 		</form>
 		{{#if errorMessage}}
 			<h4 class="unlock_error">{{errorMessage}}</h4>
